--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@ Homestead.json
 Homestead.yaml
 Thumbs.db
 /firebase-debug.log
-/firebase-credentials.json
+/firebase-credentials.jsonfirebase-credentials.json
