Ignore firebase credentials

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Thumbs.db
 /config/firebase-credentials.json
 storage/app/firebase-credentials.json
 firebase-credentials.json
+firebase-credentials.json
